[package]
name = "hayasaka"
version = "0.1.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2018"

[dependencies]
chrono = "0.4"
kube = { version = "0.50.0" }
rustc-hash = "1.1"
kube-derive = "0.50.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.1", features = ["full"] }
http = "0.2.3"
serde = "1.0"
futures = "0.3.12"
log = "0.4.14"
env_logger = "0.8.3"
subprocess = "0.2.6"

serde_json = "1.0"
json-patch = "*"
tempfile = "3.2"
Inflector = "0.11.4"
url = "2.2.0"
thiserror = "1.0"
anyhow = "1.0"
duplicate = "0.2.9"
peg = "0.6.3"
fieldpath = {path = "./crates/fieldpath"}

serde_yaml = { git = "https://github.com/CertainLach/serde-yaml.git", branch = "feature/old-octals-quirk" }

jrsonnet-evaluator = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "kubers-qol", features = ["serde", "anyhow-error"] }
jrsonnet-cli = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "kubers-qol" }
jrsonnet-interner = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "kubers-qol" }
jrsonnet-parser = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "kubers-qol" }
jrsonnet-types = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "kubers-qol" }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
rev = "50fb4ca63dc7e8fb8aa2914de5c8a5b4413f2c62"

[workspace]
members = ["crates/*"]