[package]
name = "hayasaka"
version = "0.1.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2018"

[dependencies]
chrono = "0.4"
kube = { version = "0.64.0", default-features = false, features = ["client", "native-tls"] }
rustc-hash = "1.1"
kube-derive = "0.64.0"
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_20"] }
tokio = { version = "1.1", features = ["full"] }
http = "0.2.3"
serde = "1.0"
futures = "0.3.12"
log = "0.4.14"
env_logger = "0.9.0"
subprocess = "0.2.6"

serde_json = "1.0"
json-patch = "*"
tempfile = "3.2"
Inflector = "0.11.4"
url = "2.2.0"
thiserror = "1.0"
anyhow = "1.0"
duplicate = "0.3.0"
peg = "0.7.0"
fieldpath = { path = "./crates/fieldpath" }

serde_yaml_with_quirks = "0.8.17"

jrsonnet-evaluator = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "master", features = ["serde", "anyhow-error"] }
jrsonnet-cli = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "master" }
jrsonnet-interner = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "master" }
jrsonnet-parser = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "master" }
jrsonnet-types = { git = "https://github.com/CertainLach/jrsonnet.git", branch = "master" }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
rev = "52814b893c87e1c0350cae13fc1988fe2aa9886a"

[workspace]
members = ["crates/fieldpath"]
