[package]
name = "hayasaka"
version = "0.1.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2021"

[dependencies]
chrono = "0.4"
kube = { version = "0.69.1" }
rustc-hash = "1.1"
kube-derive = "0.69.1"
k8s-openapi = { version = "0.14.0", default-features = false, features = [
	"v1_20",
] }
tokio = { version = "1.1", features = ["full"] }
http = "0.2.3"
serde = "1.0"
futures = "0.3.12"
log = "0.4.14"
env_logger = "0.9.0"
subprocess = "0.2.6"
topological-sort = "0.1.0"

serde_json = "1.0"
json-patch = "*"
tempfile = "3.2"
Inflector = "0.11.4"
url = "2.2.0"
thiserror = "1.0"
anyhow = "1.0"
duplicate = "0.4.0"
peg = "0.8.0"
fieldpath = { path = "./crates/fieldpath" }
walkdir = "2.3.2"
clap = { version = "3.1.5", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
serde_yaml_with_quirks = "0.8.17"

blake2 = "0.10.4"
digest = "0.10.3"
hex = "0.4.3"

jrsonnet-evaluator = { path = "/home/lach/build/jrsonnet/crates/jrsonnet-evaluator" }
jrsonnet-cli = { path = "/home/lach/build/jrsonnet/crates/jrsonnet-cli" }
jrsonnet-interner = { path = "/home/lach/build/jrsonnet/crates/jrsonnet-interner" }
jrsonnet-parser = { path = "/home/lach/build/jrsonnet/crates/jrsonnet-parser" }
jrsonnet-types = { path = "/home/lach/build/jrsonnet/crates/jrsonnet-types" }
jrsonnet-macros = { path = "/home/lach/build/jrsonnet/crates/jrsonnet-macros" }
gcmodule = { git = "https://github.com/CertainLach/gcmodule", branch = "jrsonnet" }

[workspace]
members = ["crates/*"]
